--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -43,8 +43,7 @@
                         Account <b class="caret"></b>
                     </a>
                     <ul class="dropdown-menu">
-                        <li><a href="{{ url_for('auth.logout') }}">Change Password</a></li>
-                        <li><a href="{{ url_for('auth.logout') }}">Change Email</a></li>
+                        <li><a href="{{ url_for('main.change_password') }}">Change Password</a></li>
                         <li><a href="{{ url_for('auth.logout') }}">Log Out</a></li>
                     </ul>
                 </li>
